force-app/main/default/objects/AI_Usage_Tracking__c/AI_Usage_Tracking__c.object-meta.xml
<CustomObject>
    <label>Usage Tracking</label>
    <nameField>
        <displayFormat>Usage-{000000000}</displayFormat>
        <label>AI Usage Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>