force-app/main/default/objects/AI_Usage_Tracking__c/fields/AI_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Prompt</label>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>AI Usage Trackings</relationshipLabel>
    <relationshipName>AI_Usage_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>