force-app/main/default/objects/AI_Usage_Tracking__c/fields/Last_60_Days_Calls__c.field-meta.xml
<CustomField>
    <fullName>Last_60_Days_Calls__c</fullName>
    <label>Last 60 Days Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>