force-app/main/default/objects/AI_Usage_Tracking__c/fields/Last_60_Days_Rank__c.field-meta.xml
<CustomField>
    <fullName>Last_60_Days_Rank__c</fullName>
    <description>User&apos;s ranking in the last 60 Days. Based on how many calls made.</description>
    <label>Last 60 Days Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>