force-app/main/default/objects/AI_Usage_Tracking__c/fields/Last_60_Days_Saving_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Last_60_Days_Saving_Seconds__c</fullName>
    <description>Last 60 Days Saving in hours</description>
    <label>Last 60 Days Saving(Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>