force-app/main/default/objects/AI_Usage_Tracking__c/fields/Lifetime_Calls__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Calls__c</fullName>
    <description>Lifetime Calls</description>
    <label>Lifetime Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>