force-app/main/default/objects/AI_Usage_Tracking__c/fields/Lifetime_Rank__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Rank__c</fullName>
    <description>User&apos;s rank based on the lifetime Ai usage</description>
    <label>Lifetime Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>