force-app/main/default/objects/AI_Usage_Tracking__c/fields/Lifetime_Saving_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Saving_Seconds__c</fullName>
    <description>Lifetime Saving in Hours</description>
    <label>Lifetime Saving(Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>