force-app/main/default/objects/AI_Usage_Tracking__c/fields/Money_Saved__c.field-meta.xml
<CustomField>
    <fullName>Money_Saved__c</fullName>
    <formula>(Lifetime_Saving_Seconds__c / 3600) *  (IF( $Setup.GPTfy_Settings__c.Hourly_Cost__c &gt; 0, $Setup.GPTfy_Settings__c.Hourly_Cost__c, 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Money Saved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>