force-app/main/default/objects/AI_Usage_Tracking__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <formula>AI_Prompt__r.Object__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object</label>
    <type>Text</type>
</CustomField>