force-app/main/default/objects/AI_Usage_Tracking__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <description>GPTfy User&apos;s Profile</description>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>