force-app/main/default/objects/AI_Usage_Tracking__c/recordTypes/Department.recordType-meta.xml
<RecordType>
    <fullName>Department</fullName>
    <active>true</active>
    <description>Usage tracking by user&apos;s department</description>
    <label>Department</label>
</RecordType>