force-app/main/default/objects/AI_Usage_Tracking__c/recordTypes/Object.recordType-meta.xml
<RecordType>
    <fullName>Object</fullName>
    <active>true</active>
    <description>Usage tracking by target object</description>
    <label>Object</label>
</RecordType>