force-app/main/default/objects/AI_Usage_Tracking__c/recordTypes/Profile.recordType-meta.xml
<RecordType>
    <fullName>Profile</fullName>
    <active>true</active>
    <description>Usage tracking by Profile</description>
    <label>Profile</label>
</RecordType>