force-app/main/default/objects/AI_Usage_Tracking__c/recordTypes/Prompt.recordType-meta.xml
<RecordType>
    <fullName>Prompt</fullName>
    <active>true</active>
    <description>Usage tracking by Prompt</description>
    <label>Prompt</label>
</RecordType>