force-app/main/default/objects/AI_Usage_Tracking__c/recordTypes/User.recordType-meta.xml
<RecordType>
    <fullName>User</fullName>
    <active>true</active>
    <description>Usage tracking by User</description>
    <label>User</label>
</RecordType>