force-app/main/default/objects/AI_Usage_Tracking__c/recordTypes/User_Role.recordType-meta.xml
<RecordType>
    <fullName>User_Role</fullName>
    <active>true</active>
    <description>Usage tracking by user&apos;s role</description>
    <label>User Role</label>
</RecordType>